--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
-    "server": "json-server server/db.json"
+    "server": "json-server --watch server/db.json"
   },
   "private": true,
   "dependencies": {
