build: added deploy feature

--- a/angular.json
+++ b/angular.json
@@ -125,6 +125,10 @@
               "devServerTarget": "fsms-ngrx:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
