--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
-    "server": "json-server --watch server/db.json"
+    "server": "json-server --watch server/db.json",
+    "predeploy": "ng build --prod",
+    "deploy": "ng deploy fsms-ngrx --base-href=/fsms-courses-angular-app/"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +35,9 @@
     "@angular/compiler-cli": "~11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-server": "^0.16.3",
